# MiniDoc

./: .gitmodules  CMakeLists.txt  Makefile  README.md
include/: cache.h  knheap.h  minidoc.h  piece.h  undo.h
src/: executable.cpp  minidoc.cpp
tests/: CMakeLists.txt  MiniDoc_Tests.cpp
